QA fixes